# lambda-erp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  deploy.yml  release.yml  terraform-apply.yml
api/: attachments.py  auth.py  bootstrap.py  chat.py  demo_limits.py  deps.py  errors.py  main.py  oauth.py  pdf.py  providers.py  remarks_md.py  services.py
api/routers/: accounting.py  admin.py  analytics.py  bank_reconciliation.py  chat_api.py  documents.py  masters.py  proposals.py  reports.py  setup.py
api/templates/: document.html  proposal.html
docs/: chat-api-plan.md  chat-api.md  core-extension-architecture.md  gui-architecture.md  multicurrency-phase-4c.md  packaging-distribution-plan.md  recurring-subscriptions-plan.md  relational-traversal.md  releasing.md  rest-api.md  social-login-plan.md
docs/agents/: README.md  accounting.md  company_setup.md  decisions.md  gotchas.md  invariants.md  stock.md  testing.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tailwind.preset.ts  tsconfig.tsbuildinfo  vite.config.ts  vite.lib.config.ts
frontend/design/: logo_lad_erp.pdn
frontend/public/: live-demo-script.json
frontend/src/: App.tsx  bootstrap.tsx  index.css  index.ts  main.tsx  routes.tsx
lambda_erp/: __init__.py  database.py  exceptions.py  hooks.py  model.py  simulation.py  utils.py
lambda_erp/accounting/: bank_transaction.py  budget.py  chart_of_accounts.py  general_ledger.py  journal_entry.py  payment_entry.py  pos_invoice.py  purchase_invoice.py  revaluation.py  sales_invoice.py  subscription.py
lambda_erp/buying/: purchase_order.py
lambda_erp/controllers/: currency.py  defaults.py  pricing_rule.py  taxes_and_totals.py
lambda_erp/selling/: proposal.py  quotation.py  sales_order.py
lambda_erp/stock/: delivery_note.py  purchase_receipt.py  stock_entry.py  stock_ledger.py
terraform/: .gitignore  README.md
terraform/app/: .terraform.lock.hcl  acr.tf  identity.tf  (+10 more)
tests/: smoke_bootstrap.py  smoke_simulation.py  test_chat_api.py  test_company_setup.py  test_db_concurrency.py  test_db_portability.py  test_erp_validation.py  test_rest_api.py
uploads/: .gitignore
(+70 files in other folders)
